--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -6,6 +6,10 @@ image:
 options:
   docker: true
   max-time: 60
+definitions:
+  services:
+    docker:
+      memory: 3072
 
 pipelines:
   branches:
@@ -18,26 +22,41 @@ pipelines:
           - taito build-prepare:$BITBUCKET_BRANCH
     # Prepare artifacts in parallel
     - parallel:
-      - step: # admin
+      - step: # admin prepare
           script:
             - export taito_mode=ci
-            - taito artifact-prepare:admin:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
-      - step: # client
+            - taito artifact-prepare:admin:$BITBUCKET_BRANCH $BITBUCKET_COMMIT true
+          artifacts:
+            - admin.docker
+            - admin-tester.docker
+      - step: # client prepare
           script:
             - export taito_mode=ci
-            - taito artifact-prepare:client:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
-      - step: # graphql
+            - taito artifact-prepare:client:$BITBUCKET_BRANCH $BITBUCKET_COMMIT true
+          artifacts:
+            - client.docker
+            - client-tester.docker
+      - step: # graphql prepare
           script:
             - export taito_mode=ci
-            - taito artifact-prepare:graphql:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
-      - step: # server
+            - taito artifact-prepare:graphql:$BITBUCKET_BRANCH $BITBUCKET_COMMIT true
+          artifacts:
+            - graphql.docker
+            - graphql-tester.docker
+      - step: # server prepare
           script:
             - export taito_mode=ci
-            - taito artifact-prepare:server:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
-      - step: # www
+            - taito artifact-prepare:server:$BITBUCKET_BRANCH $BITBUCKET_COMMIT true
+          artifacts:
+            - server.docker
+            - server-tester.docker
+      - step: # www prepare
           script:
             - export taito_mode=ci
-            - taito artifact-prepare:www:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
+            - taito artifact-prepare:www:$BITBUCKET_BRANCH $BITBUCKET_COMMIT true
+          artifacts:
+            - www.docker
+            - www-tester.docker
     # Deploy the changes to target environment
     - step:
         script:
@@ -55,6 +74,7 @@ pipelines:
     - step:
         script:
           - export taito_mode=ci
+          - "taito -v artifact-load: tester"
           - taito deployment-wait:$BITBUCKET_BRANCH
           - taito test:$BITBUCKET_BRANCH
           - taito deployment-verify:$BITBUCKET_BRANCH
@@ -64,23 +84,23 @@ pipelines:
         #   - [ $BITBUCKET_EXIT_CODE != 0 ] && taito db-revert:$BITBUCKET_BRANCH $BITBUCKET_COMMIT || :
     # Release artifacts (push previously built container images with a new tag)
     - parallel:
-      - step: # admin
+      - step: # admin release
           script:
             - export taito_mode=ci
             - taito artifact-release:admin:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
-      - step: # client
+      - step: # client release
           script:
             - export taito_mode=ci
             - taito artifact-release:client:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
-      - step: # graphql
+      - step: # graphql release
           script:
             - export taito_mode=ci
             - taito artifact-release:graphql:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
-      - step: # server
+      - step: # server release
           script:
             - export taito_mode=ci
             - taito artifact-release:server:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
-      - step: # www
+      - step: # www release
           script:
             - export taito_mode=ci
             - taito artifact-release:www:$BITBUCKET_BRANCH $BITBUCKET_COMMIT
