feat: vc_provider, ci_provider

--- a/docker-compose-test.yaml
+++ b/docker-compose-test.yaml
@@ -91,8 +91,8 @@ services:
       template_default_environments: ${template_default_environments}
       template_default_organization: ${template_default_organization}
       template_default_organization_abbr: ${template_default_organization_abbr}
-      template_default_git_organization: ${template_default_git_organization}
-      template_default_git_url: ${template_default_git_url}
+      template_default_vc_organization: ${template_default_vc_organization}
+      template_default_vc_url: ${template_default_vc_url}
       template_default_sentry_organization: ${template_default_sentry_organization}
       template_default_domain: ${template_default_domain}
       template_default_domain_prod: ${template_default_domain_prod}
