feat: delete ci scripts, vc_url_prod

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -22,6 +22,7 @@ substitutions:
   _TEMPLATE_DEFAULT_ORGANIZATION_ABBR:
   _TEMPLATE_DEFAULT_VC_ORGANIZATION:
   _TEMPLATE_DEFAULT_VC_URL:
+  _TEMPLATE_DEFAULT_VC_URL_PROD:
   _TEMPLATE_DEFAULT_SENTRY_ORGANIZATION:
   _TEMPLATE_DEFAULT_DOMAIN:
   _TEMPLATE_DEFAULT_DOMAIN_PROD:
@@ -74,6 +75,7 @@ steps:
     export template_default_organization_abbr=${_TEMPLATE_DEFAULT_ORGANIZATION_ABBR}
     export template_default_vc_organization=${_TEMPLATE_DEFAULT_VC_ORGANIZATION}
     export template_default_vc_url=${_TEMPLATE_DEFAULT_VC_URL}
+    export template_default_vc_url_prod=${_TEMPLATE_DEFAULT_VC_URL_PROD}
     export template_default_sentry_organization=${_TEMPLATE_DEFAULT_SENTRY_ORGANIZATION}
     export template_default_domain=${_TEMPLATE_DEFAULT_DOMAIN}
     export template_default_domain_prod=${_TEMPLATE_DEFAULT_DOMAIN_PROD}
@@ -145,6 +147,7 @@ steps:
     - template_default_organization_abbr=${_TEMPLATE_DEFAULT_ORGANIZATION_ABBR}
     - template_default_vc_organization=${_TEMPLATE_DEFAULT_VC_ORGANIZATION}
     - template_default_vc_url=${_TEMPLATE_DEFAULT_VC_URL}
+    - template_default_vc_url_prod=${_TEMPLATE_DEFAULT_VC_URL_PROD}
     - template_default_sentry_organization=${_TEMPLATE_DEFAULT_SENTRY_ORGANIZATION}
     - template_default_domain=${_TEMPLATE_DEFAULT_DOMAIN}
     - template_default_domain_prod=${_TEMPLATE_DEFAULT_DOMAIN_PROD}
@@ -188,6 +191,7 @@ steps:
     - template_default_organization_abbr=${_TEMPLATE_DEFAULT_ORGANIZATION_ABBR}
     - template_default_vc_organization=${_TEMPLATE_DEFAULT_VC_ORGANIZATION}
     - template_default_vc_url=${_TEMPLATE_DEFAULT_VC_URL}
+    - template_default_vc_url_prod=${_TEMPLATE_DEFAULT_VC_URL_PROD}
     - template_default_sentry_organization=${_TEMPLATE_DEFAULT_SENTRY_ORGANIZATION}
     - template_default_domain=${_TEMPLATE_DEFAULT_DOMAIN}
     - template_default_domain_prod=${_TEMPLATE_DEFAULT_DOMAIN_PROD}
@@ -229,6 +233,7 @@ steps:
     - template_default_organization_abbr=${_TEMPLATE_DEFAULT_ORGANIZATION_ABBR}
     - template_default_vc_organization=${_TEMPLATE_DEFAULT_VC_ORGANIZATION}
     - template_default_vc_url=${_TEMPLATE_DEFAULT_VC_URL}
+    - template_default_vc_url_prod=${_TEMPLATE_DEFAULT_VC_URL_PROD}
     - template_default_sentry_organization=${_TEMPLATE_DEFAULT_SENTRY_ORGANIZATION}
     - template_default_domain=${_TEMPLATE_DEFAULT_DOMAIN}
     - template_default_domain_prod=${_TEMPLATE_DEFAULT_DOMAIN_PROD}
@@ -270,6 +275,7 @@ steps:
     - template_default_organization_abbr=${_TEMPLATE_DEFAULT_ORGANIZATION_ABBR}
     - template_default_vc_organization=${_TEMPLATE_DEFAULT_VC_ORGANIZATION}
     - template_default_vc_url=${_TEMPLATE_DEFAULT_VC_URL}
+    - template_default_vc_url_prod=${_TEMPLATE_DEFAULT_VC_URL_PROD}
     - template_default_sentry_organization=${_TEMPLATE_DEFAULT_SENTRY_ORGANIZATION}
     - template_default_domain=${_TEMPLATE_DEFAULT_DOMAIN}
     - template_default_domain_prod=${_TEMPLATE_DEFAULT_DOMAIN_PROD}
@@ -311,6 +317,7 @@ steps:
     - template_default_organization_abbr=${_TEMPLATE_DEFAULT_ORGANIZATION_ABBR}
     - template_default_vc_organization=${_TEMPLATE_DEFAULT_VC_ORGANIZATION}
     - template_default_vc_url=${_TEMPLATE_DEFAULT_VC_URL}
+    - template_default_vc_url_prod=${_TEMPLATE_DEFAULT_VC_URL_PROD}
     - template_default_sentry_organization=${_TEMPLATE_DEFAULT_SENTRY_ORGANIZATION}
     - template_default_domain=${_TEMPLATE_DEFAULT_DOMAIN}
     - template_default_domain_prod=${_TEMPLATE_DEFAULT_DOMAIN_PROD}
@@ -352,6 +359,7 @@ steps:
     - template_default_organization_abbr=${_TEMPLATE_DEFAULT_ORGANIZATION_ABBR}
     - template_default_vc_organization=${_TEMPLATE_DEFAULT_VC_ORGANIZATION}
     - template_default_vc_url=${_TEMPLATE_DEFAULT_VC_URL}
+    - template_default_vc_url_prod=${_TEMPLATE_DEFAULT_VC_URL_PROD}
     - template_default_sentry_organization=${_TEMPLATE_DEFAULT_SENTRY_ORGANIZATION}
     - template_default_domain=${_TEMPLATE_DEFAULT_DOMAIN}
     - template_default_domain_prod=${_TEMPLATE_DEFAULT_DOMAIN_PROD}
@@ -394,6 +402,7 @@ steps:
     - template_default_organization_abbr=${_TEMPLATE_DEFAULT_ORGANIZATION_ABBR}
     - template_default_vc_organization=${_TEMPLATE_DEFAULT_VC_ORGANIZATION}
     - template_default_vc_url=${_TEMPLATE_DEFAULT_VC_URL}
+    - template_default_vc_url_prod=${_TEMPLATE_DEFAULT_VC_URL_PROD}
     - template_default_sentry_organization=${_TEMPLATE_DEFAULT_SENTRY_ORGANIZATION}
     - template_default_domain=${_TEMPLATE_DEFAULT_DOMAIN}
     - template_default_domain_prod=${_TEMPLATE_DEFAULT_DOMAIN_PROD}
@@ -434,6 +443,7 @@ steps:
     - template_default_organization_abbr=${_TEMPLATE_DEFAULT_ORGANIZATION_ABBR}
     - template_default_vc_organization=${_TEMPLATE_DEFAULT_VC_ORGANIZATION}
     - template_default_vc_url=${_TEMPLATE_DEFAULT_VC_URL}
+    - template_default_vc_url_prod=${_TEMPLATE_DEFAULT_VC_URL_PROD}
     - template_default_sentry_organization=${_TEMPLATE_DEFAULT_SENTRY_ORGANIZATION}
     - template_default_domain=${_TEMPLATE_DEFAULT_DOMAIN}
     - template_default_domain_prod=${_TEMPLATE_DEFAULT_DOMAIN_PROD}
@@ -476,6 +486,7 @@ steps:
     - template_default_organization_abbr=${_TEMPLATE_DEFAULT_ORGANIZATION_ABBR}
     - template_default_vc_organization=${_TEMPLATE_DEFAULT_VC_ORGANIZATION}
     - template_default_vc_url=${_TEMPLATE_DEFAULT_VC_URL}
+    - template_default_vc_url_prod=${_TEMPLATE_DEFAULT_VC_URL_PROD}
     - template_default_sentry_organization=${_TEMPLATE_DEFAULT_SENTRY_ORGANIZATION}
     - template_default_domain=${_TEMPLATE_DEFAULT_DOMAIN}
     - template_default_domain_prod=${_TEMPLATE_DEFAULT_DOMAIN_PROD}
@@ -516,6 +527,7 @@ steps:
     - template_default_organization_abbr=${_TEMPLATE_DEFAULT_ORGANIZATION_ABBR}
     - template_default_vc_organization=${_TEMPLATE_DEFAULT_VC_ORGANIZATION}
     - template_default_vc_url=${_TEMPLATE_DEFAULT_VC_URL}
+    - template_default_vc_url_prod=${_TEMPLATE_DEFAULT_VC_URL_PROD}
     - template_default_sentry_organization=${_TEMPLATE_DEFAULT_SENTRY_ORGANIZATION}
     - template_default_domain=${_TEMPLATE_DEFAULT_DOMAIN}
     - template_default_domain_prod=${_TEMPLATE_DEFAULT_DOMAIN_PROD}
@@ -556,6 +568,7 @@ steps:
     - template_default_organization_abbr=${_TEMPLATE_DEFAULT_ORGANIZATION_ABBR}
     - template_default_vc_organization=${_TEMPLATE_DEFAULT_VC_ORGANIZATION}
     - template_default_vc_url=${_TEMPLATE_DEFAULT_VC_URL}
+    - template_default_vc_url_prod=${_TEMPLATE_DEFAULT_VC_URL_PROD}
     - template_default_sentry_organization=${_TEMPLATE_DEFAULT_SENTRY_ORGANIZATION}
     - template_default_domain=${_TEMPLATE_DEFAULT_DOMAIN}
     - template_default_domain_prod=${_TEMPLATE_DEFAULT_DOMAIN_PROD}
@@ -598,6 +611,7 @@ steps:
     - template_default_organization_abbr=${_TEMPLATE_DEFAULT_ORGANIZATION_ABBR}
     - template_default_vc_organization=${_TEMPLATE_DEFAULT_VC_ORGANIZATION}
     - template_default_vc_url=${_TEMPLATE_DEFAULT_VC_URL}
+    - template_default_vc_url_prod=${_TEMPLATE_DEFAULT_VC_URL_PROD}
     - template_default_sentry_organization=${_TEMPLATE_DEFAULT_SENTRY_ORGANIZATION}
     - template_default_domain=${_TEMPLATE_DEFAULT_DOMAIN}
     - template_default_domain_prod=${_TEMPLATE_DEFAULT_DOMAIN_PROD}
