--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -29,6 +29,7 @@ substitutions:
   _TEMPLATE_DEFAULT_ZONE:
   _TEMPLATE_DEFAULT_ZONE_PROD:
   _TEMPLATE_DEFAULT_PROVIDER:
+  _TEMPLATE_DEFAULT_PROVIDER_PROD:
   _TEMPLATE_DEFAULT_PROVIDER_ORG_ID:
   _TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD:
   _TEMPLATE_DEFAULT_PROVIDER_REGION:
@@ -82,6 +83,7 @@ steps:
     export template_default_zone=${_TEMPLATE_DEFAULT_ZONE}
     export template_default_zone_prod=${_TEMPLATE_DEFAULT_ZONE_PROD}
     export template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER}
+    export template_default_provider_prod=${_TEMPLATE_DEFAULT_PROVIDER_PROD}
     export template_default_provider_org_id=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID}
     export template_default_provider_org_id_prod=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD}
     export template_default_provider_region=${_TEMPLATE_DEFAULT_PROVIDER_REGION}
@@ -154,6 +156,7 @@ steps:
     - template_default_zone=${_TEMPLATE_DEFAULT_ZONE}
     - template_default_zone_prod=${_TEMPLATE_DEFAULT_ZONE_PROD}
     - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER}
+    - template_default_provider_prod=${_TEMPLATE_DEFAULT_PROVIDER_PROD}
     - template_default_provider_org_id=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID}
     - template_default_provider_org_id_prod=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD}
     - template_default_provider_region=${_TEMPLATE_DEFAULT_PROVIDER_REGION}
@@ -198,6 +201,7 @@ steps:
     - template_default_zone=${_TEMPLATE_DEFAULT_ZONE}
     - template_default_zone_prod=${_TEMPLATE_DEFAULT_ZONE_PROD}
     - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER}
+    - template_default_provider_prod=${_TEMPLATE_DEFAULT_PROVIDER_PROD}
     - template_default_provider_org_id=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID}
     - template_default_provider_org_id_prod=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD}
     - template_default_provider_region=${_TEMPLATE_DEFAULT_PROVIDER_REGION}
@@ -240,6 +244,7 @@ steps:
     - template_default_zone=${_TEMPLATE_DEFAULT_ZONE}
     - template_default_zone_prod=${_TEMPLATE_DEFAULT_ZONE_PROD}
     - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER}
+    - template_default_provider_prod=${_TEMPLATE_DEFAULT_PROVIDER_PROD}
     - template_default_provider_org_id=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID}
     - template_default_provider_org_id_prod=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD}
     - template_default_provider_region=${_TEMPLATE_DEFAULT_PROVIDER_REGION}
@@ -282,6 +287,7 @@ steps:
     - template_default_zone=${_TEMPLATE_DEFAULT_ZONE}
     - template_default_zone_prod=${_TEMPLATE_DEFAULT_ZONE_PROD}
     - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER}
+    - template_default_provider_prod=${_TEMPLATE_DEFAULT_PROVIDER_PROD}
     - template_default_provider_org_id=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID}
     - template_default_provider_org_id_prod=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD}
     - template_default_provider_region=${_TEMPLATE_DEFAULT_PROVIDER_REGION}
@@ -324,6 +330,7 @@ steps:
     - template_default_zone=${_TEMPLATE_DEFAULT_ZONE}
     - template_default_zone_prod=${_TEMPLATE_DEFAULT_ZONE_PROD}
     - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER}
+    - template_default_provider_prod=${_TEMPLATE_DEFAULT_PROVIDER_PROD}
     - template_default_provider_org_id=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID}
     - template_default_provider_org_id_prod=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD}
     - template_default_provider_region=${_TEMPLATE_DEFAULT_PROVIDER_REGION}
@@ -366,6 +373,7 @@ steps:
     - template_default_zone=${_TEMPLATE_DEFAULT_ZONE}
     - template_default_zone_prod=${_TEMPLATE_DEFAULT_ZONE_PROD}
     - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER}
+    - template_default_provider_prod=${_TEMPLATE_DEFAULT_PROVIDER_PROD}
     - template_default_provider_org_id=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID}
     - template_default_provider_org_id_prod=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD}
     - template_default_provider_region=${_TEMPLATE_DEFAULT_PROVIDER_REGION}
@@ -409,6 +417,7 @@ steps:
     - template_default_zone=${_TEMPLATE_DEFAULT_ZONE}
     - template_default_zone_prod=${_TEMPLATE_DEFAULT_ZONE_PROD}
     - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER}
+    - template_default_provider_prod=${_TEMPLATE_DEFAULT_PROVIDER_PROD}
     - template_default_provider_org_id=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID}
     - template_default_provider_org_id_prod=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD}
     - template_default_provider_region=${_TEMPLATE_DEFAULT_PROVIDER_REGION}
@@ -450,6 +459,7 @@ steps:
     - template_default_zone=${_TEMPLATE_DEFAULT_ZONE}
     - template_default_zone_prod=${_TEMPLATE_DEFAULT_ZONE_PROD}
     - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER}
+    - template_default_provider_prod=${_TEMPLATE_DEFAULT_PROVIDER_PROD}
     - template_default_provider_org_id=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID}
     - template_default_provider_org_id_prod=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD}
     - template_default_provider_region=${_TEMPLATE_DEFAULT_PROVIDER_REGION}
@@ -493,6 +503,7 @@ steps:
     - template_default_zone=${_TEMPLATE_DEFAULT_ZONE}
     - template_default_zone_prod=${_TEMPLATE_DEFAULT_ZONE_PROD}
     - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER}
+    - template_default_provider_prod=${_TEMPLATE_DEFAULT_PROVIDER_PROD}
     - template_default_provider_org_id=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID}
     - template_default_provider_org_id_prod=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD}
     - template_default_provider_region=${_TEMPLATE_DEFAULT_PROVIDER_REGION}
@@ -534,6 +545,7 @@ steps:
     - template_default_zone=${_TEMPLATE_DEFAULT_ZONE}
     - template_default_zone_prod=${_TEMPLATE_DEFAULT_ZONE_PROD}
     - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER}
+    - template_default_provider_prod=${_TEMPLATE_DEFAULT_PROVIDER_PROD}
     - template_default_provider_org_id=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID}
     - template_default_provider_org_id_prod=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD}
     - template_default_provider_region=${_TEMPLATE_DEFAULT_PROVIDER_REGION}
@@ -575,6 +587,7 @@ steps:
     - template_default_zone=${_TEMPLATE_DEFAULT_ZONE}
     - template_default_zone_prod=${_TEMPLATE_DEFAULT_ZONE_PROD}
     - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER}
+    - template_default_provider_prod=${_TEMPLATE_DEFAULT_PROVIDER_PROD}
     - template_default_provider_org_id=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID}
     - template_default_provider_org_id_prod=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD}
     - template_default_provider_region=${_TEMPLATE_DEFAULT_PROVIDER_REGION}
@@ -618,6 +631,7 @@ steps:
     - template_default_zone=${_TEMPLATE_DEFAULT_ZONE}
     - template_default_zone_prod=${_TEMPLATE_DEFAULT_ZONE_PROD}
     - template_default_provider=${_TEMPLATE_DEFAULT_PROVIDER}
+    - template_default_provider_prod=${_TEMPLATE_DEFAULT_PROVIDER_PROD}
     - template_default_provider_org_id=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID}
     - template_default_provider_org_id_prod=${_TEMPLATE_DEFAULT_PROVIDER_ORG_ID_PROD}
     - template_default_provider_region=${_TEMPLATE_DEFAULT_PROVIDER_REGION}
