--- a/package.json
+++ b/package.json
@@ -11,10 +11,11 @@
     "install-all:worker": "cd worker && npm install",
     "install-all:www": "cd www && npm install",
     "taito-init": "taito -z init:${taito_env} && npm run import-db-data",
-    "taito-init:clean": "taito -z init:${taito_env} --clean && npm run import-db-data",
-    "taito-init:local:clean": "npm run taito-init:clean && npm run clean:storage",
-    "clean:storage": "if [ -d storage ]; then echo Cleaning storage; rm -rf ./storage/bucket/*; rm -rf ./storage/.minio.sys/buckets/bucket/*/; fi",
+    "taito-init:clean": "taito -z init:${taito_env} --clean && npm run import-db-data && npm run clean:storage",
     "import-db-data": "if [ -f ./database/data/${taito_env}.sql ]; then taito db-import:${taito_env} ./database/data/${taito_env}.sql; fi",
+    "clean:storage": "if [ ${taito_env} = 'local' ] && [ -d storage ]; then echo Cleaning storage; rm -rf ./storage/bucket/*; rm -rf ./storage/.minio.sys/buckets/bucket/*/; fi",
+    "db-deploy": "npm run generate-db-classes",
+    "generate-db-classes": "if [ ${taito_env} = 'local' ] && [ -f ./server/generate ]; then taito exec:server ./generate; fi",
     "info:local": "yes | taito secrets:${taito_env}",
     "info": "yes | taito secrets:${taito_env} | grep :\\{PLAIN\\} | sed -e 's|{PLAIN}| |'",
     "info_todo_comment": "TODO autoconfirm on taito secrets:prod",
