--- a/alternatives/server-micronaut-java/build.gradle
+++ b/alternatives/server-micronaut-java/build.gradle
@@ -57,7 +57,9 @@ dependencies {
     testCompile "io.micronaut.test:micronaut-test-junit5"
     testRuntime "org.junit.jupiter:junit-jupiter-engine"
 
-    // Database and database class generation
+    compile "org.apache.commons:commons-lang3:3.9"
+
+    // Database, jooq, and jooq class generation
     compile 'io.micronaut:micronaut-spring' // For db transaction support
     runtime 'org.springframework:spring-jdbc' // For db transaction support
     compile 'org.jooq:jooq:3.11.11'
@@ -68,12 +70,10 @@ dependencies {
     generate 'org.jooq:jooq-codegen:3.11.11'
     generate 'org.postgresql:postgresql:42.2.5'
     runtime 'org.postgresql:postgresql:42.2.5'
-
     generate "javax.xml.bind:jaxb-api:2.3.0"
     generate "com.sun.xml.bind:jaxb-core:2.3.0"
     generate "com.sun.xml.bind:jaxb-impl:2.3.0"
     generate "javax.activation:activation:1.1.1"
-
 }
 
 test.classpath += configurations.developmentOnly
