fix: micronaut prod build

--- a/alternatives/server-micronaut-java/Dockerfile.build
+++ b/alternatives/server-micronaut-java/Dockerfile.build
@@ -2,18 +2,27 @@
 FROM adoptopenjdk/openjdk11-openj9:jdk-11.0.1.13-alpine-slim as builder
 ARG SERVICE_DIR=.
 WORKDIR /service
-COPY ${SERVICE_DIR} /service
-RUN ./gradlew && ./gradlew copyRuntimeDeps
+COPY ${SERVICE_DIR} ./
+RUN ./gradlew build
 
 FROM adoptopenjdk/openjdk11-openj9:jdk-11.0.1.13-alpine-slim
 LABEL version=${BUILD_VERSION} \
-      company=companyname \
-      project=server-template \
-      role=client
+      company=sandbox \
+      project=sandbox-jukka6 \
+      role=server
 ENV BUILD_VERSION ${BUILD_VERSION}
 WORKDIR /service
 COPY --from=builder /build/libs/*.jar server.jar
-USER daemon # TODO
+RUN addgroup -S micronaut && \
+    adduser -S -D -G micronaut micronaut
+USER micronaut
 EXPOSE 8080
-# TODO: how to use secrets file in application.yml
-CMD DATABASE_PASSWORD=$(cat /run/secrets/DATABASE_PASSWORD) java -XX:+UnlockExperimentalVMOptions -XX:+UseCGroupMemoryLimitForHeap -Dcom.sun.management.jmxremote -noverify ${JAVA_OPTS} -jar server.jar
+# TODO: how to use secrets file in application.yml. just replace?
+CMD DATABASE_PASSWORD=$(cat /run/secrets/DATABASE_PASSWORD) \
+  java \
+    -XX:+UnlockExperimentalVMOptions \
+    -XX:+UseCGroupMemoryLimitForHeap \
+    -Dcom.sun.management.jmxremote \
+    -noverify \
+    ${JAVA_OPTS} \
+    -jar server.jar
