--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -41,6 +41,8 @@ substitutions:
   _TEMPLATE_DEFAULT_CI_PROVIDER_PROD:
   _TEMPLATE_DEFAULT_VC_PROVIDER:
   _TEMPLATE_DEFAULT_VC_PROVIDER_PROD:
+  _TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROVIDER:
+  _TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROVIDER_PROD:
   _TEMPLATE_DEFAULT_CONTAINER_REGISTRY:
   _TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROD:
   _TEMPLATE_DEFAULT_KUBERNETES:
@@ -95,6 +97,8 @@ steps:
     export template_default_ci_provider_prod=${_TEMPLATE_DEFAULT_CI_PROVIDER_PROD}
     export template_default_vc_provider=${_TEMPLATE_DEFAULT_VC_PROVIDER}
     export template_default_vc_provider_prod=${_TEMPLATE_DEFAULT_VC_PROVIDER_PROD}
+    export template_default_container_registry_provider=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROVIDER}
+    export template_default_container_registry_provider_prod=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROVIDER_PROD}
     export template_default_container_registry=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY}
     export template_default_container_registry_prod=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROD}
     export template_default_kubernetes=${_TEMPLATE_DEFAULT_KUBERNETES}
@@ -168,6 +172,8 @@ steps:
     - template_default_ci_provider_prod=${_TEMPLATE_DEFAULT_CI_PROVIDER_PROD}
     - template_default_vc_provider=${_TEMPLATE_DEFAULT_VC_PROVIDER}
     - template_default_vc_provider_prod=${_TEMPLATE_DEFAULT_VC_PROVIDER_PROD}
+    - template_default_container_registry_provider=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROVIDER}
+    - template_default_container_registry_provider_prod=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROVIDER_PROD}
     - template_default_container_registry=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY}
     - template_default_container_registry_prod=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROD}
     - template_default_kubernetes=${_TEMPLATE_DEFAULT_KUBERNETES}
@@ -213,6 +219,8 @@ steps:
     - template_default_ci_provider_prod=${_TEMPLATE_DEFAULT_CI_PROVIDER_PROD}
     - template_default_vc_provider=${_TEMPLATE_DEFAULT_VC_PROVIDER}
     - template_default_vc_provider_prod=${_TEMPLATE_DEFAULT_VC_PROVIDER_PROD}
+    - template_default_container_registry_provider=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROVIDER}
+    - template_default_container_registry_provider_prod=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROVIDER_PROD}
     - template_default_container_registry=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY}
     - template_default_container_registry_prod=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROD}
     - template_default_kubernetes=${_TEMPLATE_DEFAULT_KUBERNETES}
@@ -256,6 +264,8 @@ steps:
     - template_default_ci_provider_prod=${_TEMPLATE_DEFAULT_CI_PROVIDER_PROD}
     - template_default_vc_provider=${_TEMPLATE_DEFAULT_VC_PROVIDER}
     - template_default_vc_provider_prod=${_TEMPLATE_DEFAULT_VC_PROVIDER_PROD}
+    - template_default_container_registry_provider=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROVIDER}
+    - template_default_container_registry_provider_prod=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROVIDER_PROD}
     - template_default_container_registry=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY}
     - template_default_container_registry_prod=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROD}
     - template_default_kubernetes=${_TEMPLATE_DEFAULT_KUBERNETES}
@@ -299,6 +309,8 @@ steps:
     - template_default_ci_provider_prod=${_TEMPLATE_DEFAULT_CI_PROVIDER_PROD}
     - template_default_vc_provider=${_TEMPLATE_DEFAULT_VC_PROVIDER}
     - template_default_vc_provider_prod=${_TEMPLATE_DEFAULT_VC_PROVIDER_PROD}
+    - template_default_container_registry_provider=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROVIDER}
+    - template_default_container_registry_provider_prod=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROVIDER_PROD}
     - template_default_container_registry=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY}
     - template_default_container_registry_prod=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROD}
     - template_default_kubernetes=${_TEMPLATE_DEFAULT_KUBERNETES}
@@ -342,6 +354,8 @@ steps:
     - template_default_ci_provider_prod=${_TEMPLATE_DEFAULT_CI_PROVIDER_PROD}
     - template_default_vc_provider=${_TEMPLATE_DEFAULT_VC_PROVIDER}
     - template_default_vc_provider_prod=${_TEMPLATE_DEFAULT_VC_PROVIDER_PROD}
+    - template_default_container_registry_provider=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROVIDER}
+    - template_default_container_registry_provider_prod=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROVIDER_PROD}
     - template_default_container_registry=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY}
     - template_default_container_registry_prod=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROD}
     - template_default_kubernetes=${_TEMPLATE_DEFAULT_KUBERNETES}
@@ -385,6 +399,8 @@ steps:
     - template_default_ci_provider_prod=${_TEMPLATE_DEFAULT_CI_PROVIDER_PROD}
     - template_default_vc_provider=${_TEMPLATE_DEFAULT_VC_PROVIDER}
     - template_default_vc_provider_prod=${_TEMPLATE_DEFAULT_VC_PROVIDER_PROD}
+    - template_default_container_registry_provider=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROVIDER}
+    - template_default_container_registry_provider_prod=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROVIDER_PROD}
     - template_default_container_registry=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY}
     - template_default_container_registry_prod=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROD}
     - template_default_kubernetes=${_TEMPLATE_DEFAULT_KUBERNETES}
@@ -429,6 +445,8 @@ steps:
     - template_default_ci_provider_prod=${_TEMPLATE_DEFAULT_CI_PROVIDER_PROD}
     - template_default_vc_provider=${_TEMPLATE_DEFAULT_VC_PROVIDER}
     - template_default_vc_provider_prod=${_TEMPLATE_DEFAULT_VC_PROVIDER_PROD}
+    - template_default_container_registry_provider=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROVIDER}
+    - template_default_container_registry_provider_prod=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROVIDER_PROD}
     - template_default_container_registry=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY}
     - template_default_container_registry_prod=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROD}
     - template_default_kubernetes=${_TEMPLATE_DEFAULT_KUBERNETES}
@@ -471,6 +489,8 @@ steps:
     - template_default_ci_provider_prod=${_TEMPLATE_DEFAULT_CI_PROVIDER_PROD}
     - template_default_vc_provider=${_TEMPLATE_DEFAULT_VC_PROVIDER}
     - template_default_vc_provider_prod=${_TEMPLATE_DEFAULT_VC_PROVIDER_PROD}
+    - template_default_container_registry_provider=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROVIDER}
+    - template_default_container_registry_provider_prod=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROVIDER_PROD}
     - template_default_container_registry=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY}
     - template_default_container_registry_prod=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROD}
     - template_default_kubernetes=${_TEMPLATE_DEFAULT_KUBERNETES}
@@ -515,6 +535,8 @@ steps:
     - template_default_ci_provider_prod=${_TEMPLATE_DEFAULT_CI_PROVIDER_PROD}
     - template_default_vc_provider=${_TEMPLATE_DEFAULT_VC_PROVIDER}
     - template_default_vc_provider_prod=${_TEMPLATE_DEFAULT_VC_PROVIDER_PROD}
+    - template_default_container_registry_provider=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROVIDER}
+    - template_default_container_registry_provider_prod=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROVIDER_PROD}
     - template_default_container_registry=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY}
     - template_default_container_registry_prod=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROD}
     - template_default_kubernetes=${_TEMPLATE_DEFAULT_KUBERNETES}
@@ -557,6 +579,8 @@ steps:
     - template_default_ci_provider_prod=${_TEMPLATE_DEFAULT_CI_PROVIDER_PROD}
     - template_default_vc_provider=${_TEMPLATE_DEFAULT_VC_PROVIDER}
     - template_default_vc_provider_prod=${_TEMPLATE_DEFAULT_VC_PROVIDER_PROD}
+    - template_default_container_registry_provider=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROVIDER}
+    - template_default_container_registry_provider_prod=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROVIDER_PROD}
     - template_default_container_registry=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY}
     - template_default_container_registry_prod=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROD}
     - template_default_kubernetes=${_TEMPLATE_DEFAULT_KUBERNETES}
@@ -599,6 +623,8 @@ steps:
     - template_default_ci_provider_prod=${_TEMPLATE_DEFAULT_CI_PROVIDER_PROD}
     - template_default_vc_provider=${_TEMPLATE_DEFAULT_VC_PROVIDER}
     - template_default_vc_provider_prod=${_TEMPLATE_DEFAULT_VC_PROVIDER_PROD}
+    - template_default_container_registry_provider=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROVIDER}
+    - template_default_container_registry_provider_prod=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROVIDER_PROD}
     - template_default_container_registry=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY}
     - template_default_container_registry_prod=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROD}
     - template_default_kubernetes=${_TEMPLATE_DEFAULT_KUBERNETES}
@@ -643,6 +669,8 @@ steps:
     - template_default_ci_provider_prod=${_TEMPLATE_DEFAULT_CI_PROVIDER_PROD}
     - template_default_vc_provider=${_TEMPLATE_DEFAULT_VC_PROVIDER}
     - template_default_vc_provider_prod=${_TEMPLATE_DEFAULT_VC_PROVIDER_PROD}
+    - template_default_container_registry_provider=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROVIDER}
+    - template_default_container_registry_provider_prod=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROVIDER_PROD}
     - template_default_container_registry=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY}
     - template_default_container_registry_prod=${_TEMPLATE_DEFAULT_CONTAINER_REGISTRY_PROD}
     - template_default_kubernetes=${_TEMPLATE_DEFAULT_KUBERNETES}
