--- a/docker-nginx.conf
+++ b/docker-nginx.conf
@@ -1,4 +1,4 @@
-worker_processes                1;
+worker_processes                auto;
 
 error_log                       /dev/stdout warn;
 pid                             /tmp/nginx.pid;
@@ -19,6 +19,9 @@ http {
         listen [::]:80;
         server_name             localhost;
         client_max_body_size    32m;
+
+        # auth_basic              “user”;
+        # auth_basic_user_file    /etc/nginx/.htpasswd;
 
         location /graphql {
             proxy_pass http://server-template-graphql:8080;
@@ -126,11 +129,6 @@ http {
         location / {
             proxy_pass http://server-template-client:8080;
             proxy_http_version 1.1;
-
-            # Example: Enable basic auth on client so that credentials will
-            # be asked from user before any api calls are made
-            # auth_basic              “user”;
-            # auth_basic_user_file    /etc/nginx/.htpasswd;
 
             proxy_redirect off;
 
